updatet URL and doc
